for #370 and #355 - prevent multiple button click via JS and slightly refactor contact reporting

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 @import "modules/flash-message";
 @import "modules/banner";
 @import "modules/ajax";
+@import "modules/js";
 @import "modules/js-geolocation";
 @import "modules/js-cookie-warning";
 @import "modules/js-modal";
