--- a/app/views/contacts/shared/_new.html.slim
+++ b/app/views/contacts/shared/_new.html.slim
@@ -1,8 +1,7 @@
-- if reporting
-  = t('.send_us_a_message')
-= simple_form_for contact,
-                    html: { class: 'contact-form' },
-                    remote: reporting do |f|
+- reporting = contact.reporting?
+= simple_form_for contact, html: { class: 'contact-form' }, remote: true do |f|
+  - if reporting
+    p= t('.send_us_a_message')
   = f.input :name, label: false,
                    input_html: { placeholder: t('.name_placeholder') }
   = f.input :email, label: false,
@@ -14,4 +13,5 @@
                       input_html: { placeholder: t('.message_placeholder') }
   = f.input :url, as: :hidden
   = f.input :reporting, as: :hidden
-  = f.submit t '.send'
+  button.Contact-Submit.JS-Single-Click-Button
+    = t '.send'
