--- a/app/views/contacts/new.js.erb
+++ b/app/views/contacts/new.js.erb
@@ -1,3 +1,3 @@
 $('#new_contact').replaceWith(
-  "<%= j render('/contacts/shared/new', contact: @contact, reporting: true) %>"
+  "<%= j render('/contacts/shared/new', contact: @contact) %>"
 );
