for #370 - improve UX by ensuring correct flash message coloring and removing errors on contact form submission success

--- a/app/assets/stylesheets/modules/_flash-message.scss
+++ b/app/assets/stylesheets/modules/_flash-message.scss
@@ -15,19 +15,19 @@
 }
 
 .Flash-message--alert {
-  background: $brand_brown;
+  background: $brand_brown !important;
 }
 
 .Flash-message--success {
-  background: $brand_green;
+  background: $brand_green !important;
 }
 
 .Flash-message--error {
-  background: $brand_orange;
+  background: $brand_orange !important;
 }
 
 .Flash-message--notice {
-  background: $brand_yellow;
+  background: $brand_yellow !important;
 }
 
 .Flash-message__close {
