--- a/app/views/contacts/create.html.slim
+++ b/app/views/contacts/create.html.slim
@@ -2,3 +2,4 @@
 
 - content_for :additional_js do
   | $('.Contact-Submit').trigger('finished');
+  | $('#new_contact').find('span.error').remove();
