--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,9 @@ html class='no-js' lang=I18n.locale
   head
     title
       = full_title(yield(:title))
+    - meta_description = yield(:meta_description)
+    - if meta_description
+      meta name='description' content=meta_description
 
     - cache 'html_head' do
       = render 'layouts/partials/head'
