remove autocomplete & typeahead

--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -7,7 +7,7 @@
                       spellcheck: false,
                       autocomplete: 'off',
                       autofocus: true,
-                      class: 'input-xlg typeahead' }
+                      class: 'input-xlg' }
   = f.input :search_location, label: t('.loc_label'),
                               wrapper_html: {class: 'JS-Geolocation__wrapper'},
                               input_html: { \
