--- a/app/views/offers/index/_pending_ajax.html.slim
+++ b/app/views/offers/index/_pending_ajax.html.slim
@@ -9,7 +9,7 @@
 
   javascript:
     Clarat.Search.Presenter.get().sendMainSearch()
-    Clarat.Search.Presenter.get().sendSupportSearch()
+    Clarat.Search.Presenter.get().sendLocationSupportSearch()
     // Clarat.Ajax.replace(
     //   $('.content-main'), window.location.href, { historyPush: false }
     // );
