for #266 - refactor location usage in search, delete unneeded files

--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -33,5 +33,4 @@
                     'search_form[search_location]' => \
                       search_form.search_location,
                     'search_form[generated_geolocation]' => \
-                      search_form.generated_geolocation),
-                    data: { no_turbolink: true }
+                      search_form.generated_geolocation)
