--- a/app/assets/stylesheets/rails_admin/custom/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.css.scss
@@ -15,9 +15,8 @@
 
 // Custom styling for Notes section
 .Notes {
-  h3 {
-    font-size: 14px;
-  }
+  h2 { font-size: 24px; }
+  h3 { font-size: 14px; }
 
   .Note {
     position: relative;
@@ -42,6 +41,40 @@
       &.hidden_contact { background-color: $brand_orange; }
       &.external_info { background-color: $brand-violet; }
       &.other { background-color: $brand_brown; }
+    }
+  }
+}
+
+// Custom Styling for StateMachine section
+.StateMachine {
+  h2 { font-size: 24px; }
+
+  .StateMachine--State {
+    padding: 2px 3px;
+    color: $brand_white;
+    font-size: 12px;
+
+    &.initialized { background-color: darkkhaki; }
+    &.ready_for_approval { background-color: darkseagreen; }
+    &.approved { background-color: darkcyan; }
+    &.in_renewal { background-color: deeppink; }
+    &.renewed { background-color: deeppink; }
+    &.expired { background-color: tomato; }
+    &.deactivated { background-color: darkorange; }
+    &.paused { background-color: grey; }
+  }
+
+  ul.StateMachine--EventList {
+    padding: 0;
+
+    li.StateMachine--Event {
+      list-style-type: none;
+      display: inline-block;
+
+      a.btn-info {
+        background-color: dimgrey;
+        border: none;
+      }
     }
   }
 }
