--- a/app/views/offer_mailer/inform.text.erb
+++ b/app/views/offer_mailer/inform.text.erb
@@ -10,7 +10,9 @@ Lieber<%- else %>
 Liebe<%- end %> <%= @contact_person.first_name %>,
 <%- end %>
 
-seit Kurzem sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org zu finden.
+kennen Sie http://www.clarat.org schon? Das ist ein neues Portal mit
+Unterstützungsangeboten für Kinder, Jugendliche und Familien. Man kann auch Ihre
+Angebote bei clarat finden.
 
 <%- if @offers.count == 1 %>
 Ihr Angebot heißt bei clarat:
@@ -24,23 +26,31 @@ Ihre Angebote heißen bei clarat:
 <%- end %>
 <%- end %>
 
-Fehlt etwas? Das kann sein. Denn wir sind auch weiterhin dabei, stetig Angebote zu ergänzen. Deshalb kommt es vor, dass wir noch nicht alle Angebote einer Organisation erfasst haben.
+Hat sich irgendwo ein Fehler eingeschlichen? Dann melden Sie sich bei uns. Nur
+so kann clarat besser werden.
 
-Oder hat sich ein Fehler eingeschlichen? Melden Sie sich bei uns! Wir freuen uns über jedes Feedback.
+clarat ist ein kostenloses Web-Verzeichnis und wird von der gemeinnützigen
+Benckiser Stiftung Zukunft ( http://www.benckiser-stiftung.org/ ) entwickelt.
+Hier finden Kinder, Jugendliche und Familien einfach Hilfe in ihrer Nähe. Aber
+auch Menschen, die anderen helfen wollen. Wir hoffen, dass auch Ihre Angebote
+mit clarat noch leichter gefunden werden.
 
-clarat wird von einer gemeinnützigen Stiftung entwickelt und ist ein kostenloses Web-Verzeichnis. Hier finden Kinder, Jugendliche und Familien in Not einfach Hilfe in ihrer Nähe.
+Für clarat haben wir neben einer einfachen Navigation in Zusammenarbeit mit
+Sprach-Experten eine leicht verständliche Sprache entwickelt. Dadurch kann jedes
+Angebot mit einem Klick auch in weitere Sprachen (u.a. Arabisch, Russisch,
+Türkisch) übersetzt werden. Mehr zu clarat erfahren Sie in unserem kurzen
+Einführungsfilm ( http://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/ )
+oder auf unserem Blog ( http://blog.clarat.org ).
 
-Neben einer einfachen Navigation haben wir auf eine leicht verständliche Sprache geachtet. Dies führt auch dazu, dass jedes Angebot mit einem Klick in weitere Sprachen (u.a. Arabisch, Russisch, Türkisch) übersetzt werden kann. Zunächst haben wir mit der Aufnahme von Unterstützungsangeboten aus Berlin Friedrichshain / Kreuzberg begonnen.
+Sie sehen oben alle Angebote, die man von Ihnen bisher bei clarat findet.
+Wundern Sie sich nicht, wenn noch Angebote fehlen. Wir arbeiten daran alle
+Unterstützungsangebote in Berlin zu erfassen.
 
-Wir hoffen, dass Ihre Angebote mit clarat noch leichter gefunden werden als bisher. Von Menschen in Not. Aber auch von Menschen, die Kindern, Jugendlichen und Familien zeigen möchten, wo es Hilfe gibt.
-Wir wünschen uns, dass clarat auch Sie in Ihrer täglichen Arbeit unterstützt. Zum Beispiel, wenn Sie auf der Suche nach geeigneten Unterstützungsangeboten für hilfesuchende Menschen sind, denen Sie nicht direkt weiterhelfen können.
-
-Wenn Sie noch mehr über clarat erfahren wollen, schauen Sie sich doch unseren kurzen Einführungsfilm ( http://blog.clarat.org/einfach-hilfe-finden-unser-projekt-clarat-im-kurzfilm/ )
-an oder besuchen Sie unseren Blog ( http://blog.clarat.org ).
-
-Wir freuen uns auf Ihr Feedback!
+Haben Sie einen Vorschlag, was wir noch besser machen können? Lassen Sie uns
+wissen, was Sie über clarat denken. Wir freuen uns auf Ihr Feedback!
 
 Mit freundlichen Grüßen
+das clarat Team
 
 Anne Schulze
 
@@ -49,8 +59,9 @@ ein Projekt der Benckiser Stiftung Zukunft
 Französische Straße 47
 10117 Berlin
 Tel.: +49 (0)30 55 57 96 00
+www.clarat.org
 
-P.S. Dies ist eine einmalige Informationsemail für Sie. Falls Sie weiterhin informiert werden möchten, wenn Angebote auf clarat mit Ihnen als Kontaktperson aufgenommen werden, dann besuchen Sie bitte folgenden Link:
-<%= @subscribe_href %>
-Wir werden Ihnen keine Werbung senden.
-Wenn Sie keine weiteren Emails von uns wünschen, brauchen Sie nichts weiter tun. Wir werden Sie dann nicht noch einmal anschreiben.
+P.S. Gerne informieren wir Sie, wenn mehr Ihrer Angebote online sind.
+     Klicken Sie einfach diesen Link:
+     <%= @subscribe_href %>
+     Ansonsten erhalten sie keine Mails mehr von uns.
