--- a/app/views/offer_mailer/newly_approved_offers.html.haml
+++ b/app/views/offer_mailer/newly_approved_offers.html.haml
@@ -17,18 +17,20 @@
       = @contact_person.first_name
 
 %p
-  es gibt ein neues Angebot auf clarat, in dem Sie als Kontakt eingetragen sind.
+  erinnern Sie sich noch an clarat - das Portal, auf dem Kinder, Jugendliche
+  und Familien einfach Hilfe finden?
+
+%p
+  Auf clarat hat sich einiges getan! Wie versprochen halten wir Sie darüber auf
+  dem Laufenden. Inzwischen gibt es auch neue Angebote von Ihnen:
 
 %p
   - if @offers.count == 1
-    Ihr Angebot heißt bei clarat:
-    %br
     = '"' + @offers.first.name.strip + '",'
     zu finden unter folgendem Link:
     %br
     = link_to offer_url(@offers.first), offer_url(@offers.first)
   - else
-    Ihre Angebote heißen bei clarat:
     %ul
       - @offers.each do |offer|
         %li
@@ -37,11 +39,31 @@
           %br
           = link_to offer_url(offer), offer_url(offer)
 
-%p
-  Mit freundlichen Grüßen,
+
 
 %p
-  Das clarat Team
+  Hat sich ein Fehler eingeschlichen? Dann melden Sie sich doch bei uns.
+
+%p
+  Wir arbeiten weiter daran, alle Unterstützungsangebote in Berlin zu erfassen.
+  Wenn noch Angebote von Ihnen fehlen, informieren wir Sie wieder per Mail
+  sobald diese auch auf clarat zu finden sind. Wollen Sie doch keine weiteren
+  Infos mehr von uns? Dann klicken Sie einfach
+  = succeed '.' do
+    = link_to 'hier', @unsubscribe_href
+
+%p
+  Wir freuen uns, wenn Sie nochmal einen Blick auf Ihre Angebote werfen. Und
+  wünschen uns, dass mit clarat in Zukunft noch mehr Menschen schneller Ihre
+  Hilfe finden.
+
+%p
+  Mit freundlichen Grüßen
+  %br
+  das clarat Team
+
+%p
+  Anne Schulze
 
 %p
   clarat
@@ -53,6 +75,5 @@
   10117 Berlin
   %br
   Tel.: +49 (0)30 55 57 96 00
-
-%small
-  = link_to 'abmelden', @unsubscribe_href
+  %br
+  = link_to 'www.clarat.org', 'http://www.clarat.org'
