--- a/app/views/offer_mailer/newly_approved_offers.text.erb
+++ b/app/views/offer_mailer/newly_approved_offers.text.erb
@@ -10,29 +10,45 @@ Lieber<%- else %>
 Liebe<%- end %> <%= @contact_person.first_name %>,
 <%- end %>
 
-es gibt ein neues Angebot auf clarat, in dem Sie als Kontakt eingetragen sind.
+erinnern Sie sich noch an clarat - das Portal, auf dem Kinder, Jugendliche und
+Familien einfach Hilfe finden?
 
+Auf clarat hat sich einiges getan! Wie versprochen, halten wir Sie darüber auf
+dem Laufenden.
 <%- if @offers.count == 1 %>
-Ihr Angebot heißt bei clarat:
+Inzwischen gibt es auch ein neues Angebot von Ihnen:
+
 "<%= @offers.first.name %>", zu finden unter folgendem Link:
 <%= offer_url(@offers.first) %>
 <%- else %>
-Ihre Angebote heißen bei clarat:
+Inzwischen gibt es auch neue Angebote von Ihnen:
+
 <%- @offers.each do |offer| %>
 - "<%= offer.name %>", zu finden unter folgendem Link:
   <%= offer_url(offer) %>
 <%- end %>
 <%- end %>
 
-Mit freundlichen Grüßen
+Hat sich ein Fehler eingeschlichen? Dann melden Sie sich doch bei uns.
 
-Das clarat Team
+Wir arbeiten weiter daran, alle Unterstützungsangebote in Berlin zu erfassen.
+Wenn noch Angebote von Ihnen fehlen, informieren wir Sie wieder per Mail sobald
+diese auch auf clarat zu finden sind. Wollen Sie doch keine weiteren Infos mehr
+von uns? Dann klicken Sie einfach hier:
+<%= @unsubscribe_href %>
+
+Wir freuen uns, wenn Sie nochmal einen Blick auf Ihre Angebote werfen. Und
+wünschen uns, dass mit clarat in Zukunft noch mehr Menschen schneller Ihre Hilfe
+finden.
+
+Mit freundlichen Grüßen
+das clarat Team
+
+Anne Schulze
 
 clarat
 ein Projekt der Benckiser Stiftung Zukunft
 Französische Straße 47
 10117 Berlin
 Tel.: +49 (0)30 55 57 96 00
-
-abmelden:
-<%= @unsubscribe_href %>
+www.clarat.org
