--- a/app/assets/stylesheets/rails_admin/custom/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.css.scss
@@ -19,6 +19,12 @@
     font-size: 14px;
   }
 
+  .Notes-List {
+    margin-left: 20px;
+    padding-left: 10px;
+    border-left: 1px solid #eee;
+  }
+
   .Note {
     position: relative;
 
