for #411 - finish implementing and improve state machine, fix bugs and tests

--- a/app/views/rails_admin/custom/_state_machine.html.slim
+++ b/app/views/rails_admin/custom/_state_machine.html.slim
@@ -1,5 +1,5 @@
 - if object.try(:aasm_state)
-  - if @object.class == Offer
+  - if object.class == Offer || object.class == Organization
     / TODO: Find a better way to selectively render this (RA config?)
     .StateMachine
       h3 Zustand
