for #411 - button spacing; remove unnecessary admin help displays; improve state change invalid error message

--- a/app/assets/stylesheets/rails_admin/custom/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/custom/theming.css.scss
@@ -75,6 +75,7 @@
     li.StateMachine--Event {
       list-style-type: none;
       display: inline-block;
+      margin-right: 5px;
 
       a.btn-info {
         background-color: dimgrey;
