--- a/app/views/offer_mailer/newly_approved_offers.html.haml
+++ b/app/views/offer_mailer/newly_approved_offers.html.haml
@@ -22,10 +22,15 @@
 
 %p
   Auf clarat hat sich einiges getan! Wie versprochen halten wir Sie darüber auf
-  dem Laufenden. Inzwischen gibt es auch neue Angebote von Ihnen:
+  dem Laufenden. Inzwischen gibt es auch
+  - if @offers_count == 1
+    ein neues Angebot
+  - else
+    neue Angebote
+  von Ihnen:
 
 %p
-  - if @offers.count == 1
+  - if @offers_count == 1
     = '"' + @offers.first.name.strip + '",'
     zu finden unter folgendem Link:
     %br
@@ -42,20 +47,22 @@
 
 
 %p
-  Hat sich ein Fehler eingeschlichen? Dann melden Sie sich doch bei uns.
+  Werfen Sie doch einen kurzen Blick auf
+  = succeed '.' do
+    - if @offers_count == 1
+      Ihr Angebot
+    - else
+      Ihre Angebote
+  Haben Sie einen Fehler gefunden? Dann geben Sie uns gern Bescheid.
 
 %p
   Wir arbeiten weiter daran, alle Unterstützungsangebote in Berlin zu erfassen.
-  Wenn noch Angebote von Ihnen fehlen, informieren wir Sie wieder per Mail
-  sobald diese auch auf clarat zu finden sind. Wollen Sie doch keine weiteren
-  Infos mehr von uns? Dann klicken Sie einfach
-  = succeed '.' do
-    = link_to 'hier', @unsubscribe_href
+  Sobald weitere Angebote von Ihnen bei clarat zu finden sind, informieren wir
+  Sie per Mail.
 
 %p
-  Wir freuen uns, wenn Sie nochmal einen Blick auf Ihre Angebote werfen. Und
-  wünschen uns, dass mit clarat in Zukunft noch mehr Menschen schneller Ihre
-  Hilfe finden.
+  In Zukunft finden dann hoffentlich immer mehr Menschen durch clarat einfach
+  und schnell Ihre Hilfe.
 
 %p
   Mit freundlichen Grüßen
@@ -77,3 +84,8 @@
   Tel.: +49 (0)30 55 57 96 00
   %br
   = link_to 'www.clarat.org', 'http://www.clarat.org'
+
+%small
+  Sie wollen keine weiteren Infos mehr von uns bekommen? Dann klicken Sie
+  = succeed '.' do
+    = link_to 'hier', @unsubscribe_href
