--- a/app/views/offer_mailer/newly_approved_offers.text.erb
+++ b/app/views/offer_mailer/newly_approved_offers.text.erb
@@ -15,11 +15,13 @@ Familien einfach Hilfe finden?
 
 Auf clarat hat sich einiges getan! Wie versprochen, halten wir Sie darüber auf
 dem Laufenden.
-<%- if @offers.count == 1 %>
+<%- if @offers_count == 1 %>
 Inzwischen gibt es auch ein neues Angebot von Ihnen:
 
 "<%= @offers.first.name %>", zu finden unter folgendem Link:
 <%= offer_url(@offers.first) %>
+
+Werfen Sie doch einen kurzen Blick auf Ihr Angebot.
 <%- else %>
 Inzwischen gibt es auch neue Angebote von Ihnen:
 
@@ -27,19 +29,17 @@ Inzwischen gibt es auch neue Angebote von Ihnen:
 - "<%= offer.name %>", zu finden unter folgendem Link:
   <%= offer_url(offer) %>
 <%- end %>
-<%- end %>
 
-Hat sich ein Fehler eingeschlichen? Dann melden Sie sich doch bei uns.
+Werfen Sie doch einen kurzen Blick auf Ihre Angebote.
+<%- end %>
+Haben Sie einen Fehler gefunden? Dann geben Sie uns gern Bescheid.
 
 Wir arbeiten weiter daran, alle Unterstützungsangebote in Berlin zu erfassen.
-Wenn noch Angebote von Ihnen fehlen, informieren wir Sie wieder per Mail sobald
-diese auch auf clarat zu finden sind. Wollen Sie doch keine weiteren Infos mehr
-von uns? Dann klicken Sie einfach hier:
-<%= @unsubscribe_href %>
+Sobald weitere Angebote von Ihnen bei clarat zu finden sind, informieren wir Sie
+per Mail.
 
-Wir freuen uns, wenn Sie nochmal einen Blick auf Ihre Angebote werfen. Und
-wünschen uns, dass mit clarat in Zukunft noch mehr Menschen schneller Ihre Hilfe
-finden.
+In Zukunft finden dann hoffentlich immer mehr Menschen durch clarat einfach und
+schnell Ihre Hilfe.
 
 Mit freundlichen Grüßen
 das clarat Team
@@ -52,3 +52,7 @@ Französische Straße 47
 10117 Berlin
 Tel.: +49 (0)30 55 57 96 00
 www.clarat.org
+
+
+Sie wollen keine weiteren Infos mehr von uns bekommen? Dann klicken Sie hier:
+<%= @unsubscribe_href %>
