for #409 - no more js singletons; js setup happens onload and gets replaced so webkit doesn't try to do it again after back btn

--- a/app/views/offers/index/_pending_ajax.html.slim
+++ b/app/views/offers/index/_pending_ajax.html.slim
@@ -5,8 +5,11 @@
       h2= t '.searching'
       i.fa.fa-spin.fa-circle-o-notch
 
-- content_for :view_specific_scripts do
-
   javascript:
-    Clarat.Search.Presenter.get().sendMainSearch()
-    Clarat.Search.Presenter.get().sendLocationSupportSearch()
+    window.onload = function() {
+      if (!Clarat.Search.presenter) {
+        Clarat.Search.presenter = new Clarat.Search.Presenter
+        Clarat.Search.presenter.sendMainSearch()
+        Clarat.Search.presenter.sendLocationSupportSearch()
+      }
+    }
