--- a/app/views/offer_mailer/inform.html.haml
+++ b/app/views/offer_mailer/inform.html.haml
@@ -93,7 +93,7 @@
   = link_to 'www.clarat.org', 'http://www.clarat.org'
 
 %p
-  P.S. Gerne informieren wir Sie, wenn mehr Ihrer Angebote online sind.
+  PS Gerne informieren wir Sie, wenn mehr Ihrer Angebote online sind.
   = succeed '.' do
     = link_to 'Klicken Sie einfach hier', @subscribe_href
   Ansonsten erhalten sie keine Mails mehr von uns.
