--- a/app/views/offer_mailer/inform.text.erb
+++ b/app/views/offer_mailer/inform.text.erb
@@ -61,7 +61,7 @@ Französische Straße 47
 Tel.: +49 (0)30 55 57 96 00
 www.clarat.org
 
-P.S. Gerne informieren wir Sie, wenn mehr Ihrer Angebote online sind.
+PS Gerne informieren wir Sie, wenn mehr Ihrer Angebote online sind.
      Klicken Sie einfach diesen Link:
      <%= @subscribe_href %>
      Ansonsten erhalten sie keine Mails mehr von uns.
