--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -43,6 +43,10 @@
               benckiser: \
               link_to('Benckiser-Stiftung-Zukunft',
                       'http://www.benckiser-stiftung.org/',
+                      target: '_blank'),
+              about_us: \
+              link_to('hier',
+                      '/ueber-uns',
                       target: '_blank')
           h4.FAQ_question = t '.section_one.question_nine'
           .FAQ_paragraph
