remove legacy search form views

--- a/app/views/offers/index/_advanced_search.html.slim
+++ b/app/views/offers/index/_advanced_search.html.slim
@@ -1,3 +1,5 @@
+/ /////////////   NOT FUNCTIONAL!  ///////////// /
+/ Remnant for reference. TODO: remove once reimplemented in JS.
 .filter-form.filter-form--isCollapsed
   / See #258 - remove filter-form--isCollapsed modifier if return to progressive enhancement approach
   h2.filter-form__headline = t '.form_headline'
