--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -7,10 +7,16 @@ noscript.NoScript
   i.fa.fa-exclamation-triangle
   p = t('.noscript_warning')
 
-/ Inform JS about the category structure
+/ Inform JS…
+/ …about the category structure
 #category-tree(
   data={structure: render('offers/index/categories_nest.json', set: @category_tree, depth: 0)}
 )
+/ …about the filter structure
+#filters(
+  data={structure: render('offers/index/filters.json')}
+)
+
 
 / prepare modal
 = modal_for 'unavailable_location_overlay', autoopen: false do
