Insert unstyled last_updated hint to offer.show

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -61,6 +61,10 @@
         - cache [@offer, 'openings'] do
           = render 'offers/show/opening_section', offer: @offer
 
+      / Last updated?
+      p
+        => t '.last_updated'
+        = @offer.updated_at.strftime("%d.%m.%Y")
 
       / Found any mistakes?
       = link_to new_contact_path,
