--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -1,6 +1,5 @@
 - provide(:title, @organization.name )
 - location = @organization.location
-- website = @organization.homepage
 .wrapper-inner class="#{'no-location' unless location}"
   main.content-main.content-main--wide
 
@@ -32,26 +31,8 @@
           section.section-content.section-content--where
             h3.section-content__title = t '.where'
             .section-content__body
-              /! http://microformats.org/wiki/adr start
-              .adr
-                p
-                  - if location.name?
-                    span.org= location.name
-                    br
-                  - if location.addition?
-                    span.extended-address= location.addition
-                    br
-                  span.street-address= location.street
-                  br
-                  span.postal-code=> location.zip
-                  span.locality= location.city
-                - if website
-                  br
-
-                    = link_to website.shorten_url + website.pdf_appendix,
-                      website.url, target: '_blank'
-
-              /! http://microformats.org/wiki/adr end
+              = render 'organizations/who_location', organization: @organization,
+                location: location, website: @organization.homepage
               br
               #map-container
                 #map-data data={ markers: @markers.to_json }
