--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -35,4 +35,9 @@
   = f.input :category, as: :hidden
   = f.input :exact_location, as: :hidden
   = f.input :contact_type, as: :hidden
+  = f.input :age, as: :hidden
+  = f.input :target_audience, as: :hidden
+  = f.input :target_gender, as: :hidden
+  = f.input :language, as: :hidden
+  = f.input :encounter, as: :hidden
   button.main-search__submit = t '.button'
