--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -276,6 +276,42 @@
     }
   }
 
+  .filter-form {
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+
+  .filter-form__fieldset {
+    -webkit-flex: 1 0 50%;
+    -ms-flex: 1 0 50%;
+    flex: 1 0 50%;
+
+    &#age {
+      -webkit-order: 1;
+      -ms-flex-order: 1;
+      order: 1;
+    }
+
+    &#target_audience {
+      -webkit-order: 3;
+      -ms-flex-order: 3;
+      order: 3;
+    }
+
+    &#exclusive_gender {
+      -webkit-order: 2;
+      -ms-flex-order: 2;
+      order: 2;
+    }
+
+    &#contact_type {
+      -webkit-order: 4;
+      -ms-flex-order: 4;
+      order: 4;
+    }
+  }
+
   .nav-sections__headline {
     margin-bottom: 20px;
   }
