--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -36,7 +36,12 @@
                       'http://www.benckiser-stiftung.org/',
                       target: '_blank')
           h4.FAQ_question = t '.section_one.question_seven'
-          .FAQ_paragraph = t '.section_one.answer_seven'
+          .FAQ_paragraph
+            == t '.section_one.answer_seven',
+              benckiser: \
+              link_to('Benckiser-Stiftung-Zukunft',
+                      'http://www.benckiser-stiftung.org/',
+                      target: '_blank')
           h4.FAQ_question = t '.section_one.question_eight'
           .FAQ_paragraph
             == t '.section_one.answer_eight',
@@ -78,11 +83,11 @@
           h4.FAQ_question = t '.section_one.question_thirteen'
           .FAQ_paragraph = t '.section_one.answer_thirteen'
           h4.FAQ_question = t '.section_one.question_fourteen'
-          .FAQ_paragraph = t '.section_one.answer_fourteen'
+          .FAQ_paragraph == t '.section_one.answer_fourteen'
           h4.FAQ_question = t '.section_one.question_fifteen'
           .FAQ_paragraph = t '.section_one.answer_fifteen'
           h4.FAQ_question = t '.section_one.question_sixteen'
-          .FAQ_paragraph = t '.section_one.answer_sixteen'
+          .FAQ_paragraph == t '.section_one.answer_sixteen'
           h4.FAQ_question = t '.section_one.question_seventeen'
           .FAQ_paragraph = t '.section_one.answer_seventeen'
           h4.FAQ_question = t '.section_one.question_eighteen'
@@ -107,7 +112,7 @@
           .FAQ_paragraph = t '.section_two.answer_one'
           h4.FAQ_question#simple_language = t '.section_two.question_two'
           .FAQ_paragraph
-            = t '.section_two.answer_two_part_one'
+            = t '.section_two.answer_two_first_part'
             p
               ul
                 li
@@ -125,25 +130,30 @@
             p
               = t '.section_two.answer_two_second_part'
           h4.FAQ_question = t '.section_two.question_three'
-          .FAQ_paragraph = t '.section_two.answer_three_part_one'
+          .FAQ_paragraph
+            = t '.section_two.answer_three_first_part'
             p
               ul
                 li
                   == t '.section_two.answer_three_bullet_one'
-                  li
+                li
                   == t '.section_two.answer_three_bullet_two'
-                  li
+                li
                   == t '.section_two.answer_three_bullet_three'
             p
               = t '.section_two.answer_three_second_part'
           h4.FAQ_question#how_to_find_offers = t '.section_two.question_four'
-          .FAQ_paragraph = t '.section_two.answer_four_part_one'
+          .FAQ_paragraph
+            == t '.section_two.answer_four_first_part'
             p
               ul
                 li
                   == t '.section_two.answer_four_bullet_one'
             p
-              = t '.section_two.answer_four_second_part'
+              == t '.section_two.answer_four_second_part'
+              ul
+                li
+                  == t '.section_two.answer_four_bullet_two'
           h4.FAQ_question = t '.section_two.question_five'
           .FAQ_paragraph = t '.section_two.answer_five'
           h4.FAQ_question = t '.section_two.question_six'
@@ -168,69 +178,69 @@
           h4.FAQ_question = t '.section_two.question_seven'
           .FAQ_paragraph
             = t '.section_two.answer_seven_first_part'
-              p
-                ul
-                  li
-                    == t '.section_two.answer_seven_bullet_one'
-                  li
-                    == t '.section_two.answer_seven_bullet_two'
-                  li
-                    == t '.section_two.answer_seven_bullet_three'
-                  li
-                    == t '.section_two.answer_seven_bullet_four'
-                  li
-                    == t '.section_two.answer_seven_bullet_five'
-                p
-                  = t '.section_two.answer_seven_second_part'
+            p
+              ul
+                li
+                  == t '.section_two.answer_seven_bullet_one'
+                li
+                  == t '.section_two.answer_seven_bullet_two'
+                li
+                  == t '.section_two.answer_seven_bullet_three'
+                li
+                  == t '.section_two.answer_seven_bullet_four'
+                li
+                  == t '.section_two.answer_seven_bullet_five'
+            p
+            = t '.section_two.answer_seven_second_part'
           h4.FAQ_question = t '.section_two.question_eight'
           .FAQ_paragraph
             = t '.section_two.answer_eight_first_part'
-              p
-                ul
-                  li
-                    == t '.section_two.answer_eight_bullet_one'
-                  li
-                    == t '.section_two.answer_eight_bullet_two'
-                  li
-                    == t '.section_two.answer_eight_bullet_three'
-              p
-               = t '.section_two.answer_eight_second_part'
+            p
+              ul
+               li
+                 == t '.section_two.answer_eight_bullet_one'
+               li
+                 == t '.section_two.answer_eight_bullet_two'
+               li
+                 == t '.section_two.answer_eight_bullet_three'
+            p
+            = t '.section_two.answer_eight_second_part'
           h4.FAQ_question = t '.section_two.question_nine'
           .FAQ_paragraph
-                 = t '.section_two.answer_nine_first_part'
-                   p
-                     ul
-                       li
-                         == t '.section_two.answer_nine_bullet_one'
-                         li
-                           == t '.section_two.answer_nine_bullet_two'
-                         li
-                           == t '.section_two.answer_nine_bullet_three'
-                         li
-                           == t '.section_two.answer_nine_bullet_four'
-                         li
-                           == t '.section_two.answer_nine_bullet_five'
-                   p
-                     = t '.section_two.answer_nine_second_part'
+            = t '.section_two.answer_nine_first_part'
+            p
+             ul
+               li
+                 == t '.section_two.answer_nine_bullet_one'
+               li
+                 == t '.section_two.answer_nine_bullet_two'
+               li
+                 == t '.section_two.answer_nine_bullet_three'
+               li
+                 == t '.section_two.answer_nine_bullet_four'
+               li
+                 == t '.section_two.answer_nine_bullet_five'
+            p
+            = t '.section_two.answer_nine_second_part'
           h4.FAQ_question = t '.section_two.question_ten'
-          .FAQ_paragraph = t '.section_two.answer_ten'
+          .FAQ_paragraph == t '.section_two.answer_ten'
           h4.FAQ_question = t '.section_two.question_eleven'
-          .FAQ_paragraph = t '.section_two.answer_eleven'
+          .FAQ_paragraph == t '.section_two.answer_eleven'
           h4.FAQ_question = t '.section_two.question_twelve'
           .FAQ_paragraph
-                 = t '.section_two.answer_twelve_first_part'
-                   p
-                     ul
-                       li
-                         == t '.section_two.answer_twelve_bullet_one'
-                       li
-                         == t '.section_two.answer_twelve_bullet_two'
-                   p
-                     = t '.section_two.answer_twelve_second_part'
-                   p
-                    ul
-                      li
-                        == t '.section_two.answer_twelve_bullet_three'
+            == t '.section_two.answer_twelve_first_part'
+            p
+             ul
+               li
+                 == t '.section_two.answer_twelve_bullet_one'
+               li
+                 == t '.section_two.answer_twelve_bullet_two'
+            p
+                 == t '.section_two.answer_twelve_second_part'
+            p
+              ul
+               li
+                 == t '.section_two.answer_twelve_bullet_three'
           h4.FAQ_question = t '.section_two.question_thirteen'
           .FAQ_paragraph = t '.section_two.answer_thirteen'
           h4.FAQ_question = t '.section_two.question_fourteen'
@@ -244,18 +254,18 @@
               mail_to('post@clarat.org',
                       'post@clarat.org',
                       target: '_blank')
-              p
+            p
               ul
                 li
-                  = t '.section_two.answer_twelve_bullet_one'
+                  == t '.section_two.answer_twelve_bullet_one'
                 li
                   == t '.section_two.answer_twelve_bullet_two'
                 li
                   == t '.section_two.answer_twelve_bullet_three'
-            h4.FAQ_question = t '.section_two.question_fifteen'
-            .FAQ_paragraph = t '.section_two.answer_fifteen'
-            h4.FAQ_question = t '.section_two.question_sixteen'
-            .FAQ_paragraph = t '.section_two.answer_sixteen'
+          h4.FAQ_question = t '.section_two.question_fifteen'
+          .FAQ_paragraph == t '.section_two.answer_fifteen'
+          h4.FAQ_question = t '.section_two.question_sixteen'
+          .FAQ_paragraph == t '.section_two.answer_sixteen'
 
       section
         h3.section-question-group__headline = t '.section_three.heading'
@@ -264,8 +274,8 @@
           .FAQ_paragraph = t '.section_three.answer_one'
           h4.FAQ_question = t '.section_three.question_two'
           .FAQ_paragraph = t '.section_three.answer_two'
-          h4.FAQ_question = t '.section_three.question_three'
-          .FAQ_paragraph = t '.section_three.answer_three'
+          h4.FAQ_question == t '.section_three.question_three'
+          .FAQ_paragraph == t '.section_three.answer_three'
           h4.FAQ_question = t '.section_three.question_four'
           .FAQ_paragraph = t '.section_three.answer_four'
           h4.FAQ_question = t '.section_three.question_five'
@@ -275,7 +285,7 @@
           h4.FAQ_question = t '.section_three.question_seven'
           .FAQ_paragraph = t '.section_three.answer_seven'
           h4.FAQ_question = t '.section_three.question_eight'
-          .FAQ_paragraph = t '.section_three.answer_eight'
+          .FAQ_paragraph == t '.section_three.answer_eight'
           h4.FAQ_question = t '.section_three.question_nine'
           .FAQ_paragraph = t '.section_three.answer_nine'
 
@@ -284,8 +294,8 @@
         .section-question-group__body
           h4.FAQ_question#what_offers = t '.section_four.question_one'
           .FAQ_paragraph
-           == t '.section_four.answer_one'
-           p
+            == t '.section_four.answer_one'
+            p
              ul
                li
                  = t '.section_four.answer_one_bullet_one'
@@ -338,18 +348,18 @@
                        target: '_blank')
           h4.FAQ_question = t '.section_four.question_eight'
           .FAQ_paragraph
-            == t '.section_four.answer_eight',
-              mailto: \
-              mail_to('post@clarat.org',
-                      'post@clarat.org',
-                      target: '_blank'),
-              why_incomplete: \
-              link_to('Hier',
-                      '/haeufige-fragen/#what_offers',
-                      class: 'FAQ_anchor_link')
-              p
-                ul
-                  li
-                    = t '.section_four.answer_eight_bullet_one'
-                  li
-                    = t '.section_four.answer_eight_bullet_two'
+            == t '.section_four.answer_eight'
+            p
+              ul
+                li
+                  == t '.section_four.answer_eight_bullet_one'
+                li
+                  == t '.section_four.answer_eight_bullet_two',
+                    mailto: \
+                    mail_to('post@clarat.org',
+                            'post@clarat.org',
+                            target: '_blank'),
+                    what_offers: \
+                    link_to('hier',
+                            '/haeufige-fragen/#what_offers',
+                            class: 'FAQ_anchor_link')
