Make inform emails more general

--- a/app/views/offer_mailer/newly_approved_offers.html.haml
+++ b/app/views/offer_mailer/newly_approved_offers.html.haml
@@ -21,8 +21,8 @@
   und Familien einfach Hilfe finden?
 
 %p
-  Auf clarat hat sich einiges getan! Wie versprochen halten wir Sie darüber auf
-  dem Laufenden. Inzwischen gibt es auch
+  Bei clarat hat sich einiges getan und darüber möchten wir Sie auf dem
+  Laufenden halten. Inzwischen gibt es auch
   - if @offers_count == 1
     ein neues Angebot
   - else
