--- a/app/views/offer_mailer/newly_approved_offers.text.erb
+++ b/app/views/offer_mailer/newly_approved_offers.text.erb
@@ -13,8 +13,8 @@ Liebe<%- end %> <%= @contact_person.first_name %>,
 erinnern Sie sich noch an clarat - das Portal, auf dem Kinder, Jugendliche und
 Familien einfach Hilfe finden?
 
-Auf clarat hat sich einiges getan! Wie versprochen, halten wir Sie darüber auf
-dem Laufenden.
+Bei clarat hat sich einiges getan und darüber möchten wir Sie auf dem Laufenden
+halten.
 <%- if @offers_count == 1 %>
 Inzwischen gibt es auch ein neues Angebot von Ihnen:
 
