--- a/app/views/offers/show/_who_contact_people.html.slim
+++ b/app/views/offers/show/_who_contact_people.html.slim
@@ -6,7 +6,6 @@ ul.section-content--contact-person-list
       li
         / TODO: Refactor (Move to model)
         - if contact.last_name?
-          = t '.person'
           - if contact.gender?
             =< t ".#{contact.gender}"
           - if contact.academic_title?
@@ -18,10 +17,14 @@ ul.section-content--contact-person-list
             =< "#{contact.last_name}"
             br
         - elsif contact.first_name?
-          = "#{t '.person'} #{contact.first_name}"
+          = "#{contact.first_name}"
           br
         - elsif contact.operational_name?
           = "#{contact.operational_name}"
+          br
+
+        - if contact.responsibility?
+          = "#{contact.responsibility}"
           br
 
         - if contact.local_number_1?
