included link to specific faq

--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -247,7 +247,7 @@
                  == t '.section_two.answer_twelve_bullet_three'
           h4.FAQ_question = t '.section_two.question_thirteen'
           .FAQ_paragraph = t '.section_two.answer_thirteen'
-          h4.FAQ_question = t '.section_two.question_fourteen'
+          h4.FAQ_question#no_results = t '.section_two.question_fourteen'
           .FAQ_paragraph
             == t '.section_two.answer_fourteen_first_part',
             why_incomplete: \
