--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -106,7 +106,7 @@
                       target: '_blank')
 
       section
-        h3.section-question-group__headline = t '.section_two.heading'
+        h3.section-question-group__headline#search_section = t '.section_two.heading'
         .section-question-group__body
           h4.FAQ_question = t '.section_two.question_one'
           .FAQ_paragraph = t '.section_two.answer_one'
@@ -247,7 +247,7 @@
                  == t '.section_two.answer_twelve_bullet_three'
           h4.FAQ_question = t '.section_two.question_thirteen'
           .FAQ_paragraph = t '.section_two.answer_thirteen'
-          h4.FAQ_question#no_results = t '.section_two.question_fourteen'
+          h4.FAQ_question = t '.section_two.question_fourteen'
           .FAQ_paragraph
             == t '.section_two.answer_fourteen_first_part',
             why_incomplete: \
