showcase: automatisches clustering auf der map

--- a/app/views/layouts/partials/_general_assets.html.slim
+++ b/app/views/layouts/partials/_general_assets.html.slim
@@ -16,6 +16,10 @@ javascript:
                          '&callback=Clarat.GMaps.initialize',
                          cache: 'google_maps_apiv3'
 
+= javascript_include_tag 'https://google-maps-utility-library-v3.googlecode.com/'\
+                         'svn/tags/markerclustererplus/2.1.2/src/'\
+                         'markerclusterer.js',
+                         cache: 'maps_clusterer'
 
 - cache 'browser_dependent_code' do
 
